Progress commit for recipe provider fixes